k8s/redirect-http-https.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-http-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
